BPER/DEVF/force-app/main/default/objects/PA_Calendario__c/PA_Calendario__c.object-meta.xml
<CustomObject>
    <description>oggetto di collegamento per Calendario Pubblico</description>
    <label>PA Calendario</label>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>PA Calendario Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PA Calendari</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>