BPER/DEVF/force-app/main/default/objects/PA_Calendario__c/fields/CC_IdCalendario__c.field-meta.xml
<CustomField>
    <fullName>CC_IdCalendario__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IdCalendario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>