BPER/DEVF/force-app/main/default/objects/PA_Calendario__c/fields/CC_IdCoda__c.field-meta.xml
<CustomField>
    <fullName>CC_IdCoda__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IdCoda</label>
    <length>255</length>
    <type>Text</type>
</CustomField>