BPER/DEVF/force-app/main/default/objects/PA_Calendario__c/fields/CC_NumMaxChiamate__c.field-meta.xml
<CustomField>
    <fullName>CC_NumMaxChiamate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NumMaxChiamate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>