BPER/DEVF/force-app/main/default/objects/PA_Calendario__c/fields/CC_Ordinamento_Prodotti__c.field-meta.xml
<CustomField>
    <fullName>CC_Ordinamento_Prodotti__c</fullName>
    <formula>CASE( CC_Prodotto__c,
&quot;Prestito&quot;, &quot;1&quot;,
&quot;PagaPoi&quot;, &quot;2&quot;,
&quot;Carte&quot;, &quot;3&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ordinamento Prodotti</label>
    <type>Text</type>
</CustomField>