BPER/DEVF/force-app/main/default/objects/PA_Calendario__c/listViews/Calendari.listView-meta.xml
<ListView>
    <fullName>Calendari</fullName>
    <columns>NAME</columns>
    <columns>CC_Prodotto__c</columns>
    <columns>CC_NumMaxChiamate__c</columns>
    <columns>CC_Priority__c</columns>
    <filterScope>Everything</filterScope>
    <label>Calendari</label>
</ListView>